JSON Full support & merging code